--- a/PROG POE Part 1/Views/Claims/Index.cshtml
+++ b/PROG POE Part 1/Views/Claims/Index.cshtml
@@ -43,7 +43,7 @@
 							<td>@claim.Date_Submitted</td>
 							<td>@claim.Total_Hours</td>
 							<td>@claim.Hourly_Rate</td>
-							<td>@claim.Total_Amount</td>
+							<td>@claim.Total_Payment</td>
 							<td>
 
 								@if (claim.Status == PROG_POE_Part_1.Models.Status.Pending)
