Added new Card for home page for HR

--- a/PROG POE Part 1/Views/Home/Index.cshtml
+++ b/PROG POE Part 1/Views/Home/Index.cshtml
@@ -48,6 +48,18 @@
                 </div>
             </a>
         </div>
+
+        <!-- HR   -->
+        <div class="col-md-3">
+            <a asp-controller="HR" asp-action="Index" class="card-link">
+                <div class="card shadow h-100 text-center card-hover">
+                    <img src="~/images/HR icon.png" class="card-img-top " alt="HR">
+                    <div class="card-body">
+                        <h5 class="card-title">HR</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
 
