--- a/PROG POE Part 1/Views/Managers/Index.cshtml
+++ b/PROG POE Part 1/Views/Managers/Index.cshtml
@@ -88,7 +88,7 @@
                                 }
                                 else if (claim.Status == PROG_POE_Part_1.Models.Status.Verified)
                                 {
-                                    <span class="badge bg-success">verified</span>
+                                    <span class="badge bg-success">Verified</span>
                                 }
                                 else
                                 {
