--- a/PROG POE Part 1/Views/HR/Create.cshtml
+++ b/PROG POE Part 1/Views/HR/Create.cshtml
@@ -24,6 +24,10 @@
             <label class="form-label">Email</label>
             <input asp-for="Email" class="form-control" required />
         </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" asp-for="Password" required />
+        </div>
 
         <div class="mb-3">
             <label class="form-label">Role</label>
